# random-matrices

./: .gitignore  README.md  pyproject.toml
configs/: config_constant_isotropic.yaml  config_diagonal_dirac_mixture.yaml  config_diagonal_gamma.yaml  config_diagonal_rescaled_beta.yaml  config_diagonal_uniform.yaml  config_low_rank_plus_diag.yaml  config_piecewise_scalar_times_base_redrawn.yaml  config_piecewise_scalar_times_base_shared.yaml  config_piecewise_two_segments.yaml  config_rotated_haar.yaml  constant_diag_dirac.yaml  constant_orthogonal_mixture.yaml  piecewise_models.yaml  piecewise_scaled_base.yaml
configs/simulation_examples/: 01_constant_isotropic.yaml  02_constant_diag_gamma.yaml  03_constant_rotated_haar.yaml  (+3 more)
docs/: architecture.md  cli.md  config_guide.md  end_to_end_pipeline.md  inversion_methods.md  notebooks_guide.md  numerics.md  project_guide.md  quickstart.md  simulation_config_guide.md  spectral_config_guide.md  testing.md
notebooks/: 01_mp_forward_inverse_demo.ipynb  02_simulation_pipeline.ipynb  benchmark_inversion_methods.ipynb
src/mpdiff/: __init__.py  (+1 more)
tests/: test_cli_parser.py  test_config_catalog_files.py  test_config_loader.py  test_covariance_builders.py  test_empirical_spectral.py  test_inverse_method_resolution.py  test_inversion_benchmark_helpers.py  test_mp_forward.py  test_mp_inverse.py  test_notebook_references.py  test_run_full_pipeline_runner.py  test_run_simulation_runner.py  test_simulation.py  test_simulation_example_configs.py  test_spectral_config_examples.py  test_volatility_schedule.py
tools/: print_project_tree.py
(+73 files in other folders)
